# Dorian

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/dorian/: Common.hpp  ErrorHandler.hpp  FileManager.hpp  PayloadManager.hpp  ProcessExecutor.hpp  SectionManager.hpp
src/: ErrorHandler.cpp  FileManager.cpp  PayloadManager.cpp  ProcessExecutor.cpp  SectionManager.cpp  main.cpp
